// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeDocQuery()  makes an elasticSearch agg object, and the proper with @types, terms, and field 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [],
    },
  },
}
`;

exports[`makeDocQuery()  makes an elasticSearch aggs object even with filters provided! 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "query_string": Object {
            "query": "(mySearchString* OR mySearchString~)",
          },
        },
        Object {
          "term": Object {
            "@type.raw": "prove:Entity",
          },
        },
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "nested": Object {
                  "path": "sex",
                  "query": Object {
                    "bool": Object {
                      "should": Array [
                        Object {
                          "term": Object {
                            "sex.labels.raw": "male",
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`makeDocQuery()  makes an elasticSearch aggs object even with nested filters 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "query_string": Object {
            "query": "(mySearchString* OR mySearchString~)",
          },
        },
        Object {
          "term": Object {
            "@type.raw": "prove:Entity",
          },
        },
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "nested": Object {
                  "path": "brainLocation",
                  "query": Object {
                    "nested": Object {
                      "path": "brainRegion",
                      "query": Object {
                        "bool": Object {
                          "should": Array [
                            Object {
                              "term": Object {
                                "brainLocation.brainRegion.labels.raw": "Posterior complex of the thalamus",
                              },
                            },
                          ],
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`makeDocQuery()  makes an elasticSearch aggs object with a bool must match term if a type argument is provided 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "query_string": Object {
            "query": "(mySearchString* OR mySearchString~)",
          },
        },
        Object {
          "term": Object {
            "@type.raw": "prove:Entity",
          },
        },
      ],
    },
  },
}
`;

exports[`makeDocQuery()  makes an elasticSearch aggs object with a query if a textQuery argument is provided 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "query_string": Object {
            "query": "(mySearchString* OR mySearchString~)",
          },
        },
      ],
    },
  },
}
`;
